--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Proyecto Prácticas</h1>
+    <p> Este es el segundo párrafo</p>
+
+
+
     <script src="main.js"></script>
 </body>
 </html>
